Submission: Exercise 2.4 - Task

--- a/src/recipes/templates/recipes/recipes_home.html
+++ b/src/recipes/templates/recipes/recipes_home.html
@@ -6,6 +6,6 @@
 <div class="py-8 text-center">
     <h1 class="mb-4 font-serif text-3xl font-bold text-accent-600 text-primary-400">Welcome to our Recipes
         Home</h1>
-    <p class="text-accent-800">Discover, create, and share your favorite recipes!</p>
+    <p class="text-accent-800">Discover, create, and share your favorite recipes</p>
 </div>
 {% endblock %}
