--- a/src/recipes/templates/recipes/list.html
+++ b/src/recipes/templates/recipes/list.html
@@ -5,23 +5,23 @@
 {% block content %}
 <div class="container py-8 mx-auto bg-alternate_a-100">
     <h1 class="mb-4 font-serif text-3xl font-bold text-accent-600 text-primary-400">Welcome to our Recipes List!</h1>
-    <div class="flex flex-col-reverse bg-alternate_a-300">
-        <div>01</div>
-        <div>02</div>
-        <div>03</div>
-    </div>
     {% if recipes %}
-    <div class="flex flex-wrap -mx-2">
+    <div class="grid grid-cols-1 gap-5 sm:grid-cols-2">
         {% for recipe in recipes %}
-        <div class="px-2 mb-4 w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/2">
-            <div class="flex-row w-full max-w-sm lg:max-w-full lg:flex">
-                <div class="p-4 bg-white rounded-lg shadow-md transition-shadow recipe-card hover:shadow-lg">
-                    <img src="{{ recipe.recipe_image.url }}" alt="{{ recipe.name }}"
-                        class="object-cover mb-2 w-full h-32 rounded-md" width="20%" height="auto">
+        <div>
+            <div
+                class="flex overflow-hidden flex-row p-0 w-full max-w-sm bg-white rounded-lg shadow-md transition-all ease-out origin-right-- lg:max-w-full lg:flex recipe-card hover:scale-105 hover:shadow-lg">
+                <div class="w-full sm:w-1/2">
+                    <a href="{% url 'recipes:recipe-detail' recipe.pk %}" class=""><img
+                            src="{{ recipe.recipe_image.url }}" alt="{{ recipe.name }}" class="object-cover w-full h-32"
+                            width="100%" height="auto">
+                    </a>
                 </div>
-                <div class="p-4 bg-white rounded-lg shadow-md transition-shadow recipe-card hover:shadow-lg">
-                    <a href="{% url 'recipes:recipe-detail' recipe.pk %}"
-                        class="block mb-1 font-semibold text-accent-600 hover:text-accent-800">{{ recipe.name }}</a>
+                <div class="p-4 mb-4 w-full sm:w-1/2">
+                    <h2 class="mb-4 font-serif text-2xl font-bold text-accent-600 text-primary-400"><a
+                            href="{% url 'recipes:recipe-detail' recipe.pk %}"
+                            class="block mb-1 font-semibold text-accent-600 hover:text-accent-800">{{ recipe.name }}</a>
+                    </h2>
                     <p class="text-sm text-gray-600">{{ recipe.difficulty }}</p>
                 </div>
             </div>
