--- a/src/recipes/templates/recipes/list.html
+++ b/src/recipes/templates/recipes/list.html
@@ -3,7 +3,7 @@
 {% block title %}Recipe List - Recipe App{% endblock %}
 
 {% block content %}
-<div class="container py-8 mx-auto mb-12">
+<div class="container py-8 pt-20 pb-20 mx-auto mb-12">
     <h1 class="mt-12 mb-12 font-serif text-3xl font-bold text-accent-600 text-primary-400">Welcome to our Recipes List!
     </h1>
     {% if recipes %}
