--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,9 +9,10 @@
     <link href="{% static 'css/output.css' %}" rel="stylesheet">
 </head>
 
-<body class="flex flex-col min-h-screen bg-white">
+<body class="relative min-h-screen bg-white">
     <!-- Navigation -->
-    <nav class="border-b border-gray-200 shadow-sm bg-alternate_a-100">
+    <nav
+        class="fixed top-0 right-0 left-0 z-50 {% if request.resolver_match.url_name == 'home' %}bg-alternate_a-800/70 backdrop-blur-sm{% else %}bg-alternate_a-100{% endif %}">
         <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
@@ -20,9 +21,9 @@
                 <div class="flex items-center space-x-4">
                     {% block navigation %}
                     <a href="{% url 'recipes:home' %}"
-                        class="px-3 py-1 text-sm font-medium rounded-md border-2 transition-all duration-300 border-accent-300 text-accent-600 hover:text-white hover:bg-accent-400 hover:border-accent-400">Home</a>
+                        class="px-3 py-1 text-sm font-medium border-b transition-all duration-300 border-accent-300 {% if request.resolver_match.url_name == 'home' %}text-accent-300{% else %}text-accent-600{% endif %} hover:text-white hover:bg-accent-400 hover:border-accent-400 hover:rounded-md">Home</a>
                     <a href="{% url 'recipes:recipe-list' %}"
-                        class="px-3 py-1 text-sm font-medium rounded-md border-2 transition-all duration-300 border-accent-300 text-accent-600 hover:text-white hover:bg-accent-400 hover:border-accent-400">Recipes</a>
+                        class="px-3 py-1 text-sm font-medium border-b transition-all duration-300 border-accent-300 {% if request.resolver_match.url_name == 'home' %}text-accent-300{% else %}text-accent-600{% endif %} hover:text-white hover:bg-accent-400 hover:border-accent-400 hover:rounded-md">Recipes</a>
                     {% endblock %}
                 </div>
             </div>
@@ -30,17 +31,16 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="flex flex-1 justify-center items-center">
-        <div class="px-4 mx-auto w-full max-w-7xl sm:px-6 lg:px-8">
-            {% block content %}
-            {% endblock %}
-        </div>
+    <main class="relative z-10">
+        {% block content %}
+        {% endblock %}
     </main>
 
     <!-- Footer -->
-    <footer class="bg-white border-t border-gray-200 bg-alternate_a-100">
+    <footer
+        class="fixed right-0 bottom-0 left-0 z-50 {% if request.resolver_match.url_name == 'home' %}bg-alternate_a-800/70 backdrop-blur-sm text-accent-300{% else %}bg-alternate_a-100 border-t border-gray-200 text-accent-800{% endif %}">
         <div class="px-4 py-6 mx-auto max-w-7xl sm:px-6 lg:px-8">
-            <div class="text-sm text-center text-accent-800">
+            <div class="text-sm text-center">
                 {% block footer %}
                 <p>&copy; 2025 Recipe App</p>
                 {% endblock %}
