--- a/src/recipes/templates/recipes/detail.html
+++ b/src/recipes/templates/recipes/detail.html
@@ -24,7 +24,7 @@
             {% endif %}
             <div class="md:grid md:grid-cols-[50%_40%] gap-8">
                 <!-- Ingredients Section -->
-                <div class="px-8 py-6 mt-10 rounded-lg border border-dashed border-alternate_a-200">
+                <div class="px-8 py-6 mt-10 rounded-lg border border-dashed border-alternate_a-200 md:mt-6 lg:mt-0">
                     <h2 class="mb-4 font-bold text-md text-accent-600">Ingredients</h2>
                     <ul class="space-y-2">
                         {% for ingredient in recipe.return_ingredients_as_list %}
@@ -41,7 +41,7 @@
                 </div>
                 <!-- Recipe Stats -->
                 <div
-                    class="flex flex-col px-4 py-6 mt-10 rounded-lg border border-dashed border-alternate_a-200 lg:mt-0">
+                    class="flex flex-col px-4 py-6 mt-10 rounded-lg border border-dashed border-alternate_a-200 md:mt-6 lg:mt-0">
                     <div class="flex gap-2 items-center px-4 py-2">
                         <div class="w-3 h-3 rounded-full bg-alternate_a-300"></div>
                         <div class="text-sm text-gray-600">Total time: <strong class="text-accent-600">
