--- a/src/static/css/output.css
+++ b/src/static/css/output.css
@@ -1188,6 +1188,14 @@ html {
 }
 
 @media (min-width: 768px) {
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
   .md\:grid {
     display: grid;
   }
