--- a/src/recipes/templates/recipes/home.html
+++ b/src/recipes/templates/recipes/home.html
@@ -15,15 +15,30 @@
     <!-- Hero Content -->
     <div class="relative z-10 px-4 mx-auto max-w-4xl text-center text-white">
         <h1 class="mb-6 font-serif text-3xl font-bold md:text-6xl lg:text-5xl">
+            {% if user.is_authenticated %}
+            Welcome back to Recipe App, {{ user.username }}!
+            {% else %}
             Welcome to Recipe App
+            {% endif %}
         </h1>
         <p class="mb-8 text-xl opacity-90 md:text-2xl">
             Discover, create, and share your favorite recipes
         </p>
+        <!-- <a href="{% url 'recipes:recipe-list' %}"
+            class="inline-block px-8 py-4 text-lg font-bold text-white rounded-lg shadow-lg transition-all duration-300 bg-accent-400 hover:bg-accent-50 hover:scale-105 hover:bg-accent-600">
+            Explore Recipes
+        </a> -->
+        {% if user.is_authenticated %}
         <a href="{% url 'recipes:recipe-list' %}"
             class="inline-block px-8 py-4 text-lg font-bold text-white rounded-lg shadow-lg transition-all duration-300 bg-accent-400 hover:bg-accent-50 hover:scale-105 hover:bg-accent-600">
             Explore Recipes
         </a>
+        {% else %}
+        <a href="{% url 'login' %}"
+            class="inline-block px-8 py-4 text-lg font-bold text-white rounded-lg shadow-lg transition-all duration-300 bg-accent-400 hover:bg-accent-50 hover:scale-105 hover:bg-accent-600">
+            Login to Explore Recipes
+        </a>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
