--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Recipe App{% endblock %}</title>
-    <link href="{% static 'css/output.css' %}" rel="stylesheet">
+    <link href="{% static 'css/output.css' %}?v=20250103" rel="stylesheet">
 </head>
 
 <body class="relative min-h-screen bg-white">
